mirror_lang/test/valid/comments.mirror
// Single line comment
(SET $test = 42 TES)

(LOG "Comment test" GOL)

(IGNORE
    This is
    multi-line
    comment
ERONGI)

(LOG "After multi-line comment" GOL)