mirror_lang/test/invalid/undefined_variable.mirror
(SET $a = 10 TES)
(LOG $undefined_variable GOL)